vendor/registry-40351f815f426200/remain/tests/ui/struct.stderr
error: c should sort before d
 --> $DIR/struct.rs:6:5
  |
6 |     c: usize,
  |     ^
