vendor/registry-40351f815f426200/remain/tests/ui/struct.rs
use remain::sorted;

#[sorted]
struct TestStruct {
    d: usize,
    c: usize,
    a: usize,
    b: usize,
}

fn main() {}
